# esp-motion-reporter-poc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: build.yml  codeql-analysis.yml
main/: CMakeLists.txt  Kconfig.projbuild  app_calibration.h  app_main.c  app_main.cpp  app_motion.c  app_motion.h  app_status.c  app_status.h  app_utils.h  idf_component.yml  main.cpp  setup_status_led.c  setup_wifi.c  util_append.c  util_append.h
